fix: adjust navigation margins and improve item alignment

--- a/styles/join.css
+++ b/styles/join.css
@@ -164,7 +164,7 @@ form {
 }
 
 .nav {
-  margin: 88px 0 10px 50px;
+  margin: 88px 0 10px 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -173,10 +173,10 @@ form {
 .nav-item {
   cursor: pointer;
   color: var(--color-footer-p);
-  /* display: flex;
-  justify-content: center; */
+  display: flex;
+  align-items: center;
   gap: 10px;
-  /* margin: 0 0 10px 50px; */
+  padding: 8px 0 8px 50px;
 }
 
 /* nav hover color  */
